upload all files

--- a/index.html
+++ b/index.html
@@ -494,50 +494,50 @@
     </div>
   </section>
 
-  <!-- ===== Testimonials ===== -->
-  <section class="wrap">
-    <h2 class="section" data-i18n-key="sec_testi">ลูกค้าบอกต่อ</h2>
-    <p class="lead" data-i18n-key="sec_testi_lead">ผลลัพธ์จริงจากหน้างาน</p>
+<!-- ===== Testimonials ===== -->
+<section class="wrap">
+  <h2 class="section" data-i18n-key="sec_testi">ลูกค้าบอกต่อ</h2>
+  <p class="lead" data-i18n-key="sec_testi_lead">ผลลัพธ์จริงจากหน้างาน</p>
 
-    <div class="testi reveal" aria-label="เสียงจากลูกค้า">
-      <div class="testi-viewport">
-        <div class="testi-track" id="testiTrack">
-          <article class="tcard">
-            <div class="tquote">“ตั้งแต่ปรับไลน์ล้างกับจุ่มสีโครเมทตามที่แนะนำ ระยะเวลาทดสอบสเปรย์ซอลต์ผ่านได้สบายและคงที่ขึ้นมาก”</div>
-            <div class="tauthor">หัวหน้าไลน์ชุบกลุ่มยานยนต์</div>
-          </article>
-          <article class="tcard">
-            <div class="tquote">“ทีมเข้ามาช่วยตั้งบ่อชุบใหม่ ชุบติดไวขึ้นและลดของเสียจากงานหลุดได้เยอะ”</div>
-            <div class="tauthor">ลูกค้ากลุ่มโรงงานผลิตฮาร์ดแวร์</div>
-          </article>
-          <article class="tcard">
-            <div class="tquote">“สูตรไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ ทำให้การบำบัดของเสียง่ายลงและปลอดภัยขึ้น”</div>
-            <div class="tauthor">ลูกค้ากลุ่มเครื่องประดับ</div>
-          </article>
-        </div>
+  <div class="testi reveal" aria-label="เสียงจากลูกค้า">
+    <div class="testi-viewport">
+      <div class="testi-track" id="testiTrack">
+        <article class="tcard">
+          <div class="tquote" data-i18n-key="testi_q1">“ตั้งแต่ปรับไลน์ล้างกับจุ่มสีโครเมทตามที่แนะนำ ระยะเวลาทดสอบสเปรย์ซอลต์ผ่านได้สบายและคงที่ขึ้นมาก”</div>
+          <div class="tauthor" data-i18n-key="testi_author1">หัวหน้าไลน์ชุบกลุ่มยานยนต์</div>
+        </article>
+        <article class="tcard">
+          <div class="tquote" data-i18n-key="testi_q2">“ทีมเข้ามาช่วยตั้งบ่อชุบใหม่ ชุบติดไวขึ้นและลดของเสียจากงานหลุดได้เยอะ”</div>
+          <div class="tauthor" data-i18n-key="testi_author2">ลูกค้ากลุ่มโรงงานผลิตฮาร์ดแวร์</div>
+        </article>
+        <article class="tcard">
+          <div class="tquote" data-i18n-key="testi_q3">“สูตรไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ ทำให้การบำบัดของเสียง่ายลงและปลอดภัยขึ้น”</div>
+          <div class="tauthor" data-i18n-key="testi_author3">ลูกค้ากลุ่มเครื่องประดับ</div>
+        </article>
       </div>
-      <div class="dots" id="testiDots" aria-label="ตัวชี้สไลด์"></div>
     </div>
-  </section>
+    <div class="dots" id="testiDots" aria-label="ตัวชี้สไลด์"></div>
+  </div>
+</section>
 
-  <!-- ===== FAQ ===== -->
-  <section id="faq" class="wrap">
-    <h2 class="section" data-i18n-key="sec_faq">คำถามที่พบบ่อย</h2>
-    <div class="faq">
-      <details class="qa reveal">
-        <summary>รองรับระบบถังแขวน/ถังกลิ้งหรือไม่?</summary>
-        <div class="ans">รองรับทั้งสองระบบ โดยปรับอุณหภูมิ เวลา และความเข้มข้นให้เหมาะกับชิ้นงานและกำลังไฟของไลน์</div>
-      </details>
-      <details class="qa reveal">
-        <summary>ต้องเตรียมผิวก่อนชุบอย่างไร?</summary>
-        <div class="ans">ใช้เคมีกลุ่ม Pretreatment เพื่อกำจัดคราบน้ำมัน/สนิม และล้างน้ำตามให้เพียงพอ เพื่อลดปัญหาการยึดเกาะหลังการชุบ</div>
-      </details>
-      <details class="qa reveal">
-        <summary>มีบริการดูแลหน้างานหรือไม่?</summary>
-        <div class="ans">เรามีทีมเทคนิคสามารถเข้าตรวจ แนะนำสูตร และวางแผนควบคุมคุณภาพบ่อชุบให้เหมาะกับมาตรฐานของลูกค้า</div>
-      </details>
-    </div>
-  </section>
+<!-- ===== FAQ ===== -->
+<section id="faq" class="wrap">
+  <h2 class="section" data-i18n-key="sec_faq">คำถามที่พบบ่อย</h2>
+  <div class="faq">
+    <details class="qa reveal">
+      <summary data-i18n-key="faq_q1">รองรับระบบถังแขวน/ถังกลิ้งหรือไม่?</summary>
+      <div class="ans" data-i18n-key="faq_a1">รองรับทั้งสองระบบ โดยปรับอุณหภูมิ เวลา และความเข้มข้นให้เหมาะกับชิ้นงานและกำลังไฟของไลน์</div>
+    </details>
+    <details class="qa reveal">
+      <summary data-i18n-key="faq_q2">ต้องเตรียมผิวก่อนชุบอย่างไร?</summary>
+      <div class="ans" data-i18n-key="faq_a2">ใช้เคมีกลุ่ม Pretreatment เพื่อกำจัดคราบน้ำมัน/สนิม และล้างน้ำตามให้เพียงพอ เพื่อลดปัญหาการยึดเกาะหลังการชุบ</div>
+    </details>
+    <details class="qa reveal">
+      <summary data-i18n-key="faq_q3">มีบริการดูแลหน้างานหรือไม่?</summary>
+      <div class="ans" data-i18n-key="faq_a3">เรามีทีมเทคนิคสามารถเข้าตรวจ แนะนำสูตร และวางแผนควบคุมคุณภาพบ่อชุบให้เหมาะกับมาตรฐานของลูกค้า</div>
+    </details>
+  </div>
+</section>
 
   <!-- ===== Contact ===== -->
   <section id="contact" class="wrap">
@@ -546,10 +546,10 @@
       <form id="contactForm" class="contact-grid" novalidate>
         <!-- honeypot -->
         <input type="text" name="company" class="hp" autocomplete="off" tabindex="-1">
-        <input class="input" type="text" name="name" placeholder="ชื่อ-นามสกุล*" required>
-        <input class="input" type="email" name="email" placeholder="อีเมล*" required>
-        <input class="input full" type="tel" name="phone" placeholder="โทรศัพท์ (ถ้ามี)">
-        <textarea class="textarea full" name="message" placeholder="ข้อความ/ต้องการสินค้ากลุ่มไหน"></textarea>
+        <input class="input" type="text" name="name" placeholder="Name*" required>
+        <input class="input" type="email" name="email" placeholder="E-mail*" required>
+        <input class="input full" type="tel" name="phone" placeholder="Telephone">
+        <textarea class="textarea full" name="message" placeholder="Message"></textarea>
         <div class="actions-row full">
           <button class="btn" type="submit" id="sendBtn" data-i18n-key="form_submit">ส่งเข้าที่อีเมล</button>
           <a class="btn ghost" href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener" data-i18n-key="form_add_line">แอด LINE</a>
@@ -802,95 +802,127 @@ ${form.message.value.trim()}`
     }
   });
 
-  /* ===== i18n (TH/EN) ===== */
-  const I18N = {
-    th: {
-      hero_title: "เคมีงานชุบและการเตรียมผิวครบวงจร",
-      hero_tagline: "เราดูแลงานชุบครบวงจรตั้งแต่การเตรียมผิว การชุบ การรมดำ การพาสซิเวชัน ไปจนถึงน้ำยาลอกคราบและการขัดเงา พร้อมทีมเทคนิคช่วยออกแบบสูตรและควบคุมคุณภาพอ่างชุบให้สอดคล้องกับไลน์การผลิตของคุณ พร้อมตรวจวิเคราะห์สารละลาย ปรับแต่งหน้างาน และควบคุมคุณภาพเพื่อให้ผิวชิ้นงานสม่ำเสมอได้มาตรฐาน.",
-      btn_products: "ดูหมวดผลิตภัณฑ์",
-      btn_consult: "ปรึกษาทีมเทคนิค",
-      stat_years: "ปีประสบการณ์",
-      stat_lines: "ไลน์ลูกค้าดูแล",
-      stat_formulas: "สูตร/กระบวนการ",
-      stat_categories: "หมวดผลิตภัณฑ์หลัก",
-      sec_products: "ผลิตภัณฑ์ของเรา",
-      sec_products_lead: "เลือกโซลูชันให้เหมาะกับวัสดุ ชิ้นงาน และมาตรฐานอุตสาหกรรมของคุณ",
-      card_pret_title: "เคมีล้างผิวงาน",
-      card_pret_desc: "ยาล้างไขมันแบบกรด/ด่าง และอัลตร้าโซนิคช่วยกำจัดคราบน้ำมัน/สนิม เตรียมผิวพร้อมชุบ ลดของเสียในไลน์",
-      card_plating_title: "น้ำยาชุบโลหะ",
-      card_plating_desc: "เพิ่มความเงางามให้กับชิ้นงาน ซิงค์ นิกเกิล ทองแดง ทองเหลือง และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์",
-      card_black_title: "น้ำยารมดำโลหะ",
-      card_black_desc: "งานรมดำ เพื่อเพิ่มความสวยงาม ป้องกันการกัดกร่อน และลดแสงสะท้อน สีสม่ำเสมอ คุมกระบวนการง่าย",
-      card_pass_title: "โครเมตบนซิงค์",
-      card_pass_desc: "ชิ้นงานมีอายุการใช้งานที่ยาวขึ้น เพิ่มความทนการกัดกร่อน การเคลือบสีติดแน่นและทนทานมากขึ้น",
-      card_polish_title: "น้ำยากัดเงาบนโลหะ",
-      card_polish_desc: "การกัดเงาด้วยสารเคมี รวมถึงเพิ่มความสวยงามให้กับผลิตภัณฑ์ ปรับผิวให้เงางามสม่ำเสมอ ลดรอยก่อนชุบ",
-      card_strip_title: "น้ำยาลอกต่างๆ",
-      card_strip_desc: "ลอกงานชุบ/สี ตรงจุด ควบคุมง่าย พร้อมสำหรับกระบวนการต่อไป เช่น การชุบ การพ่นสี หรือการเชื่อม",
-      card_protect_title: "น้ำยารักษาผิวชุบให้คงทน",
-      card_protect_desc: "สร้างชั้นปกป้องให้กับพื้นผิวโลหะ ช่วยป้องกันการเกิดออกซิเดชั่นและการหมองคล้ำจากการใช้งานในระยะยาว",
-      card_service_title: "งานบริการลูกค้า",
-      card_service_desc: "ควบคุมคุณภาพอย่างละเอียด และให้คำปรึกษาโดยผู้เชี่ยวชาญ วางแผนคุมคุณภาพ และทดสอบหน้างาน",
-      card_equip_title: "วัสดุอุปกรณ์",
-      card_equip_desc: "การเลือกใช้อุปกรณ์และเครื่องมือที่เหมาะสม เป็นสิ่งสำคัญในกระบวนการชุบให้ได้ผลลัพธ์ที่มีคุณภาพสูง",
-      card_more: "ดูรายละเอียด →",
-      band_title: "บริการหน้างานโดยทีมเทคนิค",
-      band_text: "ช่วยติดตั้งบ่อชุบ วิเคราะห์ความเข้มข้นของสารเคมีในน้ำยา (Titration), วางแผนเติมเคมีหรือเปลี่ยนน้ำยา, และจัดทำมาตรฐานคุณภาพให้ผลิตงานได้สม่ำเสมอ",
-      band_cta: "บทความ & คู่มือ",
-      sec_testi: "ลูกค้าบอกต่อ",
-      sec_testi_lead: "ผลลัพธ์จริงจากหน้างาน",
-      sec_faq: "คำถามที่พบบ่อย",
-      contact_title: "ติดต่อทีม Baume Chemical",
-      form_submit: "ส่งเข้าที่อีเมล",
-      form_add_line: "แอด LINE",
-      form_note: "ระบบจะส่งอีเมลอัตโนมัติผ่านเซิร์ฟเวอร์ (Apps Script) และจะเด้งเป็นเมลบนเครื่อง หากเซิร์ฟเวอร์ไม่พร้อม",
-      footer_products: "หมวดผลิตภัณฑ์",
-      footer_contact: "ติดต่อเรา"
-    },
-    en: {
-      hero_title: "Electroplating Chemicals & Surface Preparation",
-      hero_tagline: "From Pretreatment, Plating, Blackening, Passivation to Strippers and Polishing — our technical team helps tailor formulas and control bath quality for your line.",
-      btn_products: "Browse Products",
-      btn_consult: "Talk to a Specialist",
-      stat_years: "Years of Experience",
-      stat_lines: "Customer Lines Served",
-      stat_formulas: "Formulas / Processes",
-      stat_categories: "Core Product Categories",
-      sec_products: "Our Products",
-      sec_products_lead: "Choose solutions that fit your material, parts, and industrial standards.",
-      card_pret_title: "Pretreatment & Cleaning",
-      card_pret_desc: "Acid/alkaline degreasers and ultrasonic cleaning remove oil/rust, preparing surfaces for plating and reducing line rejects.",
-      card_plating_title: "Metal Plating Chemistry",
-      card_plating_desc: "Bright, consistent finishes: zinc, nickel, copper, brass, and cyanide-free white bronze.",
-      card_black_title: "Blackening Solutions",
-      card_black_desc: "Attractive matte protection with reduced glare and corrosion; even color and easy process control.",
-      card_pass_title: "Passivation on Zinc",
-      card_pass_desc: "Extend service life and corrosion resistance; improve paint adhesion and durability.",
-      card_polish_title: "Chemical Polishing",
-      card_polish_desc: "Enhance appearance and uniform gloss; smooth out scratches prior to plating.",
-      card_strip_title: "Selective Strippers",
-      card_strip_desc: "Targeted removal of plating/paint for rework—easy control and ready for the next process.",
-      card_protect_title: "Protective Treatment",
-      card_protect_desc: "Topcoats/sealants that shield metal surfaces from oxidation and long-term tarnishing.",
-      card_service_title: "Customer Service",
-      card_service_desc: "Detailed QA control and expert consulting, planning, and on-site testing.",
-      card_equip_title: "Equipment & Tools",
-      card_equip_desc: "Choosing the right equipment is key to achieving high-quality plating results.",
-      card_more: "View details →",
-      band_title: "On-site Service by Technical Team",
-      band_text: "We help set up plating baths, run titration, plan replenishment/solution change, and standardize QA to keep output consistent.",
-      band_cta: "Get Started",
-      sec_testi: "What Customers Say",
-      sec_testi_lead: "Real on-site results",
-      sec_faq: "Frequently Asked Questions",
-      contact_title: "Contact Baume Chemical Team",
-      form_submit: "Send via Email",
-      form_add_line: "Add LINE",
-      form_note: "The system sends email via server (Apps Script). If unavailable, your email client will open as fallback.",
-      footer_products: "Products",
-      footer_contact: "Contact Us"
-    }
-  };
+/* ===== i18n (TH/EN) ===== */
+const I18N = {
+  th: {
+    hero_title: "เคมีงานชุบและการเตรียมผิวครบวงจร",
+    hero_tagline: "เราดูแลงานชุบครบวงจรตั้งแต่การเตรียมผิว การชุบ การรมดำ การพาสซิเวชัน ไปจนถึงน้ำยาลอกคราบและการขัดเงา พร้อมทีมเทคนิคช่วยออกแบบสูตรและควบคุมคุณภาพอ่างชุบให้สอดคล้องกับไลน์การผลิตของคุณ พร้อมตรวจวิเคราะห์สารละลาย ปรับแต่งหน้างาน และควบคุมคุณภาพเพื่อให้ผิวชิ้นงานสม่ำเสมอได้มาตรฐาน.",
+    btn_products: "ดูหมวดผลิตภัณฑ์",
+    btn_consult: "ปรึกษาทีมเทคนิค",
+    stat_years: "ปีประสบการณ์",
+    stat_lines: "ไลน์ลูกค้าดูแล",
+    stat_formulas: "สูตร/กระบวนการ",
+    stat_categories: "หมวดผลิตภัณฑ์หลัก",
+    sec_products: "ผลิตภัณฑ์ของเรา",
+    sec_products_lead: "เลือกโซลูชันให้เหมาะกับวัสดุ ชิ้นงาน และมาตรฐานอุตสาหกรรมของคุณ",
+    card_pret_title: "เคมีล้างผิวงาน",
+    card_pret_desc: "ยาล้างไขมันแบบกรด/ด่าง และอัลตร้าโซนิคช่วยกำจัดคราบน้ำมัน/สนิม เตรียมผิวพร้อมชุบ ลดของเสียในไลน์",
+    card_plating_title: "น้ำยาชุบโลหะ",
+    card_plating_desc: "เพิ่มความเงางามให้กับชิ้นงาน ซิงค์ นิกเกิล ทองแดง ทองเหลือง และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์",
+    card_black_title: "น้ำยารมดำโลหะ",
+    card_black_desc: "งานรมดำ เพื่อเพิ่มความสวยงาม ป้องกันการกัดกร่อน และลดแสงสะท้อน สีสม่ำเสมอ คุมกระบวนการง่าย",
+    card_pass_title: "โครเมตบนซิงค์",
+    card_pass_desc: "ชิ้นงานมีอายุการใช้งานที่ยาวขึ้น เพิ่มความทนการกัดกร่อน การเคลือบสีติดแน่นและทนทานมากขึ้น",
+    card_polish_title: "น้ำยากัดเงาบนโลหะ",
+    card_polish_desc: "การกัดเงาด้วยสารเคมี รวมถึงเพิ่มความสวยงามให้กับผลิตภัณฑ์ ปรับผิวให้เงางามสม่ำเสมอ ลดรอยก่อนชุบ",
+    card_strip_title: "น้ำยาลอกต่างๆ",
+    card_strip_desc: "ลอกงานชุบ/สี ตรงจุด ควบคุมง่าย พร้อมสำหรับกระบวนการต่อไป เช่น การชุบ การพ่นสี หรือการเชื่อม",
+    card_protect_title: "น้ำยารักษาผิวชุบให้คงทน",
+    card_protect_desc: "สร้างชั้นปกป้องให้กับพื้นผิวโลหะ ช่วยป้องกันการเกิดออกซิเดชั่นและการหมองคล้ำจากการใช้งานในระยะยาว",
+    card_service_title: "งานบริการลูกค้า",
+    card_service_desc: "ควบคุมคุณภาพอย่างละเอียด และให้คำปรึกษาโดยผู้เชี่ยวชาญ วางแผนคุมคุณภาพ และทดสอบหน้างาน",
+    card_equip_title: "วัสดุอุปกรณ์",
+    card_equip_desc: "การเลือกใช้อุปกรณ์และเครื่องมือที่เหมาะสม เป็นสิ่งสำคัญในกระบวนการชุบให้ได้ผลลัพธ์ที่มีคุณภาพสูง",
+    card_more: "ดูรายละเอียด →",
+    band_title: "บริการหน้างานโดยทีมเทคนิค",
+    band_text: "ช่วยติดตั้งบ่อชุบ วิเคราะห์ความเข้มข้นของสารเคมีในน้ำยา (Titration), วางแผนเติมเคมีหรือเปลี่ยนน้ำยา, และจัดทำมาตรฐานคุณภาพให้ผลิตงานได้สม่ำเสมอ",
+    band_cta: "บทความ & คู่มือ",
+    sec_testi: "ลูกค้าบอกต่อ",
+    sec_testi_lead: "ผลลัพธ์จริงจากหน้างาน",
+    sec_faq: "คำถามที่พบบ่อย",
+    contact_title: "ติดต่อทีม Baume Chemical",
+    form_submit: "ส่งเข้าที่อีเมล",
+    form_add_line: "แอด LINE",
+    form_note: "ระบบจะส่งอีเมลอัตโนมัติผ่านเซิร์ฟเวอร์ (Apps Script) และจะเด้งเป็นเมลบนเครื่อง หากเซิร์ฟเวอร์ไม่พร้อม",
+    footer_products: "หมวดผลิตภัณฑ์",
+    footer_contact: "ติดต่อเรา",
+
+    /* === เพิ่มใหม่: Testimonials & FAQ === */
+    testi_q1: "“ตั้งแต่ปรับไลน์ล้างกับจุ่มสีโครเมทตามที่แนะนำ ระยะเวลาทดสอบสเปรย์ซอลต์ผ่านได้สบายและคงที่ขึ้นมาก”",
+    testi_author1: "หัวหน้าไลน์ชุบกลุ่มยานยนต์",
+    testi_q2: "“ทีมเข้ามาช่วยตั้งบ่อชุบใหม่ ชุบติดไวขึ้นและลดของเสียจากงานหลุดได้เยอะ”",
+    testi_author2: "ลูกค้ากลุ่มโรงงานผลิตฮาร์ดแวร์",
+    testi_q3: "“สูตรไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ ทำให้การบำบัดของเสียง่ายลงและปลอดภัยขึ้น”",
+    testi_author3: "ลูกค้ากลุ่มเครื่องประดับ",
+
+    faq_q1: "รองรับระบบถังแขวน/ถังกลิ้งหรือไม่?",
+    faq_a1: "รองรับทั้งสองระบบ โดยปรับอุณหภูมิ เวลา และความเข้มข้นให้เหมาะกับชิ้นงานและกำลังไฟของไลน์",
+    faq_q2: "ต้องเตรียมผิวก่อนชุบอย่างไร?",
+    faq_a2: "ใช้เคมีกลุ่ม Pretreatment เพื่อกำจัดคราบน้ำมัน/สนิม และล้างน้ำตามให้เพียงพอ เพื่อลดปัญหาการยึดเกาะหลังการชุบ",
+    faq_q3: "มีบริการดูแลหน้างานหรือไม่?",
+    faq_a3: "เรามีทีมเทคนิคสามารถเข้าตรวจ แนะนำสูตร และวางแผนควบคุมคุณภาพบ่อชุบให้เหมาะกับมาตรฐานของลูกค้า"
+  }, /* ← ต้องมีคอมม่าตรงนี้ เพื่อคั่น th กับ en */
+
+  en: {
+    hero_title: "Electroplating Chemicals & Surface Preparation",
+    hero_tagline: "From Pretreatment, Plating, Blackening, Passivation to Strippers and Polishing — our technical team helps tailor formulas and control bath quality for your line.",
+    btn_products: "Browse Products",
+    btn_consult: "Talk to a Specialist",
+    stat_years: "Years of Experience",
+    stat_lines: "Customer Lines Served",
+    stat_formulas: "Formulas / Processes",
+    stat_categories: "Core Product Categories",
+    sec_products: "Our Products",
+    sec_products_lead: "Choose solutions that fit your material, parts, and industrial standards.",
+    card_pret_title: "Pretreatment & Cleaning",
+    card_pret_desc: "Acid/alkaline degreasers and ultrasonic cleaning remove oil/rust, preparing surfaces for plating and reducing line rejects.",
+    card_plating_title: "Metal Plating Chemistry",
+    card_plating_desc: "Bright, consistent finishes: zinc, nickel, copper, brass, and cyanide-free white bronze.",
+    card_black_title: "Blackening Solutions",
+    card_black_desc: "Attractive matte protection with reduced glare and corrosion; even color and easy process control.",
+    card_pass_title: "Passivation on Zinc",
+    card_pass_desc: "Extend service life and corrosion resistance; improve paint adhesion and durability.",
+    card_polish_title: "Chemical Polishing",
+    card_polish_desc: "Enhance appearance and uniform gloss; smooth out scratches prior to plating.",
+    card_strip_title: "Selective Strippers",
+    card_strip_desc: "Targeted removal of plating/paint for rework—easy control and ready for the next process.",
+    card_protect_title: "Protective Treatment",
+    card_protect_desc: "Topcoats/sealants that shield metal surfaces from oxidation and long-term tarnishing.",
+    card_service_title: "Customer Service",
+    card_service_desc: "Detailed QA control and expert consulting, planning, and on-site testing.",
+    card_equip_title: "Equipment & Tools",
+    card_equip_desc: "Choosing the right equipment is key to achieving high-quality plating results.",
+    card_more: "View details →",
+    band_title: "On-site Service by Technical Team",
+    band_text: "We help set up plating baths, run titration, plan replenishment/solution change, and standardize QA to keep output consistent.",
+    band_cta: "Get Started",
+    sec_testi: "What Customers Say",
+    sec_testi_lead: "Real on-site results",
+    sec_faq: "Frequently Asked Questions",
+    contact_title: "Contact Baume Chemical Team",
+    form_submit: "Send via Email",
+    form_add_line: "Add LINE",
+    form_note: "The system sends email via server (Apps Script). If unavailable, your email client will open as fallback.",
+    footer_products: "Products",
+    footer_contact: "Contact Us",
+
+    /* === Added: Testimonials & FAQ === */
+    testi_q1: "“After adjusting the cleaning line and zinc chromate passivation as advised, our salt-spray results pass easily and are far more consistent.”",
+    testi_author1: "Plating Line Lead — Automotive",
+    testi_q2: "“The team helped set up a new plating bath; adhesion improved quickly and defects from peeling dropped significantly.”",
+    testi_author2: "Hardware Manufacturing Client",
+    testi_q3: "“The cyanide-free white bronze formula made waste treatment simpler and safer.”",
+    testi_author3: "Jewelry Manufacturer",
+
+    faq_q1: "Do you support rack and barrel systems?",
+    faq_a1: "Yes—both. Adjust temperature, time, and concentration to match part geometry and line current capacity.",
+    faq_q2: "How should I prepare parts before plating?",
+    faq_a2: "Use Pretreatment chemistries to remove oil/rust and rinse thoroughly to minimize post-plating adhesion issues.",
+    faq_q3: "Do you offer on-site technical service?",
+    faq_a3: "Yes. Our technical team can audit, recommend formulas, and plan bath control to meet your quality standards."
+  }
+}; /* ← ปิดอ็อบเจ็กต์ I18N ด้วย ; */
+
 
   const langBtns = ()=> qsa('.lang-switch .lang-btn, .lang-fab .lang-btn'); // รองรับทั้งกรณีใน header และเดิม
   const transEls = ()=> qsa('[data-i18n-key]');
