--- a/contact-us.html
+++ b/contact-us.html
@@ -229,6 +229,58 @@
 }
 .hero .btn:not(.ghost):hover{ opacity:.92 }
 
+/* ===== Contact CTA Polish ===== */
+.actions.inline .btn{
+  display:inline-flex; align-items:center; gap:10px;
+  font-weight:800; letter-spacing:.2px;
+  border-radius:14px; transition:transform .12s ease, box-shadow .12s ease, background .2s ease, color .2s ease;
+}
+
+/* Primary: ส่งอีเมลของฉัน */
+#sendBtn{
+  /* ใช้ไฮไลต์โทนส้มให้อ่านชัดบนพื้นขาว */
+  background: linear-gradient(135deg,#ff9800 0%, #ffb84d 100%);
+  border:0; color:#fff;
+  box-shadow: 0 8px 22px rgba(255,152,0,.28), 0 2px 0 rgba(0,0,0,.06) inset;
+  padding:13px 18px;
+}
+#sendBtn:hover{ transform: translateY(-1px); box-shadow: 0 10px 26px rgba(255,152,0,.34), 0 2px 0 rgba(0,0,0,.06) inset; }
+#sendBtn:active{ transform: translateY(0); box-shadow: 0 6px 18px rgba(255,152,0,.32) }
+#sendBtn:focus-visible{ outline:3px solid rgba(255,152,0,.32); outline-offset:2px }
+
+/* เพิ่มไอคอนซองจดหมายด้วย pseudo-element */
+#sendBtn::before{
+  content:""; width:18px; height:18px; flex:0 0 18px;
+  background: no-repeat center/contain
+    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2Z"/><path d="m22 6-10 7L2 6"/></svg>');
+}
+
+/* Secondary (outline): หรือส่งเมลเอง — เปลี่ยนจากขาวเป็นเขียวเข้มให้ตัดพื้น */
+#altMail{
+  background:#f7fbf8;               /* พื้นจางๆ ให้เห็นเส้นขอบ */
+  color: var(--brand-2);
+  border:1.5px solid var(--brand-2);
+  padding:12px 16px;
+}
+#altMail:hover{ background: var(--brand-2); color:#fff; }
+#altMail:focus-visible{ outline:3px solid rgba(56,123,91,.3); outline-offset:2px }
+
+/* เพิ่มไอคอน paper-plane */
+#altMail::before{
+  content:""; width:18px; height:18px; flex:0 0 18px;
+  background: no-repeat center/contain
+    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="%23387b5b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m22 2-7 20-4-9-9-4Z"/><path d="M22 2 11 13"/></svg>');
+}
+#altMail:hover::before{
+  filter: brightness(0) invert(1);   /* เปลี่ยนเป็นขาวตอน hover */
+}
+
+/* จัดวางบนหน้าจอเล็กให้เป็นปุ่มเต็มบรรทัด */
+@media (max-width:560px){
+  .actions.inline{ flex-direction:column; align-items:stretch }
+  .actions.inline .btn{ width:100%; justify-content:center }
+}
+
 
     /* ===== Language Switcher — hero FAB (kept & synced) ===== */
     .lang-fab{
@@ -354,8 +406,8 @@
         <input class="input" id="emailOnly" name="email" type="email" required inputmode="email" autocomplete="email" placeholder="you@example.com" aria-required="true">
 
         <div class="actions inline">
-          <button class="btn" type="submit" id="sendBtn" data-i18n-key="send_btn">ส่งอีเมลของฉัน</button>
-          <a class="btn ghost" id="altMail" href="mailto:contact@baumechemical.com" data-i18n-key="send_alt">หรือส่งเมลเอง</a>
+          <button class="btn" type="submit" id="sendBtn" data-i18n-key="send_btn">ส่งชื่ออีเมลของคุณ</button>
+          <a class="btn ghost" id="altMail" href="mailto:contact@baumechemical.com" data-i18n-key="send_alt">หรือส่งอีเมลถึงฉัน</a>
         </div>
 
         <div class="status" id="statusMsg" aria-live="polite"></div>
@@ -527,8 +579,8 @@
         form_title: "ขอให้ติดต่อกลับทางอีเมล",
         email_label: "อีเมลของคุณ*",
         email_placeholder: "you@example.com",
-        send_btn: "ส่งอีเมลของฉัน",
-        send_alt: "หรือส่งเมลเอง",
+        send_btn: "ส่งชื่ออีเมลของคุณ",
+        send_alt: "หรือส่งอีเมลถึงฉัน",
         policy: "เราจะใช้ข้อมูลอีเมลนี้เพื่อการติดต่อกลับเท่านั้น",
         other_title: "ข้อมูลติดต่ออื่นๆ",
         phone_label: "โทรศัพท์",
@@ -572,8 +624,8 @@
         form_title: "Contact Me via Email",
         email_label: "Your email*",
         email_placeholder: "you@example.com",
-        send_btn: "Send my email",
-        send_alt: "Or email us",
+        send_btn: "Enter your E-mail",
+        send_alt: "E-mail to us",
         policy: "We will use your email solely to contact you back.",
         other_title: "Other Contact Channels",
         phone_label: "Telephone",
