--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -232,7 +232,7 @@
     <div class="grid">
       <!-- Brass/Copper -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/IbM5Qz7.jpeg" alt="Blackening for Brass and Copper"></picture>
+        <picture><img src="https://pic.in.th/image/copper.u8uPet" alt="Blackening for Brass and Copper"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Cold Immersion</span><span class="badge">Uniform Finish</span></div>
           <h3 data-i18n-key="bc_title">รมดำสำหรับทองเหลือง/ทองแดง</h3>
@@ -243,7 +243,7 @@
 
       <!-- Steel -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/mYfKcZg.jpeg" alt="Blackening for Steel"></picture>
+        <picture><img src="https://pic.in.th/image/iron.u8ueSH" alt="Blackening for Steel"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Steel</span><span class="badge">Low-Temp</span></div>
           <h3 data-i18n-key="steel_title">รมดำสำหรับเหล็ก</h3>
@@ -254,7 +254,7 @@
 
       <!-- Zinc -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/LNfV31J.jpeg" alt="Blackening for Zinc"></picture>
+        <picture><img src="https://pic.in.th/image/zinc.u8uCWy" alt="Blackening for Zinc"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Zinc</span><span class="badge">Uniform Oxide</span></div>
           <h3 data-i18n-key="zinc_title">รมดำสำหรับสังกะสี</h3>
@@ -265,7 +265,7 @@
 
       <!-- Aluminium -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/CjvOFpX.jpeg" alt="Blackening for Aluminium"></picture>
+        <picture><img src="https://pic.in.th/image/aluminium.u8utDx" alt="Blackening for Aluminium"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Aluminium</span><span class="badge">Room-Temp</span></div>
           <h3 data-i18n-key="al_title">รมดำสำหรับอลูมิเนียม</h3>
