upload all files

--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -6,7 +6,7 @@
 
   <!-- === SEO (i18n-ready) === -->
   <title id="metaTitle">น้ำยารมดำโลหะ (Blackening) | Baume Chemical</title>
-  <meta name="description" id="metaDesc" content="น้ำยารมดำสำหรับทองเหลือง ทองแดง เหล็ก สังกะสี และอลูมิเนียม แบบจุ่มเย็น ใช้งานง่าย สีสม่ำเสมอ ช่วยลดแสงสะท้อนและเสริมการป้องกันการกัดกร่อน">
+  <meta name="description" id="metaDesc" content="น้ำยารมดำสำหรับทองเหลือง ทองแดง เหล็ก ซิงค์ฉีด และอลูมิเนียม แบบจุ่มเย็น ใช้งานง่าย สีสม่ำเสมอ ช่วยลดแสงสะท้อนและเสริมการป้องกันการกัดกร่อน">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/blackening/">
   <meta name="theme-color" content="#2c5e4e">
@@ -257,8 +257,8 @@
         <picture><img src="https://img5.pic.in.th/file/secure-sv1/zinc.png" alt="Blackening for Zinc"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Zinc</span><span class="badge">Uniform Oxide</span></div>
-          <h3 data-i18n-key="zinc_title">รมดำสำหรับสังกะสี</h3>
-          <p data-i18n-key="zinc_desc">จุ่มเย็น สีดำเรียบเนียน เหมาะกับชิ้นงานชุบสังกะสีหรือโลหะผสมสังกะสี สามารถปิดผิวด้วยแลคเกอร์/น้ำมันเพื่อยืดอายุการใช้งาน.</p>
+          <h3 data-i18n-key="zinc_title">รมดำสำหรับซิงค์ฉีด</h3>
+          <p data-i18n-key="zinc_desc">จุ่มเย็น สีดำเรียบเนียน เหมาะกับชิ้นงานซิงค์ฉีดหรือโลหะผสมสังกะสี สามารถปิดผิวด้วยแลคเกอร์/น้ำมันเพื่อยืดอายุการใช้งาน.</p>
           <a class="more" href="troubleshootingblackening.html#zinc" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -407,7 +407,7 @@
     const I18N = {
       th: {
         meta_title: "น้ำยารมดำโลหะ (Blackening) | Baume Chemical",
-        meta_desc: "น้ำยารมดำสำหรับทองเหลือง ทองแดง เหล็ก สังกะสี และอลูมิเนียม แบบจุ่มเย็น ใช้งานง่าย สีสม่ำเสมอ ช่วยลดแสงสะท้อนและเสริมการป้องกันการกัดกร่อน",
+        meta_desc: "น้ำยารมดำสำหรับทองเหลือง ทองแดง เหล็ก ซิงค์ฉีด และอลูมิเนียม แบบจุ่มเย็น ใช้งานง่าย สีสม่ำเสมอ ช่วยลดแสงสะท้อนและเสริมการป้องกันการกัดกร่อน",
         og_title: "น้ำยารมดำโลหะ (Blackening) - Baume Chemical",
         og_desc: "โซลูชันรมดำโลหะ: Brass, Copper, Steel, Zinc, Aluminium — จุ่มเย็น สีดำสม่ำเสมอ เคลือบแลคเกอร์/น้ำมันปิดผิวได้",
         tw_title: "น้ำยารมดำโลหะ (Blackening) - Baume Chemical",
@@ -422,8 +422,8 @@
         bc_desc: "ผสมกับน้ำสะอาดและจุ่มโดยไม่ต้องใช้ไฟหรือให้ความร้อน เกิดชั้นดำสม่ำเสมอทั้งชิ้น ขัดเผยลายทองแดง/ทองเหลืองได้ตามต้องการ จากนั้นเคลือบแลคเกอร์หรือน้ำมันเพื่อปิดผิว.",
         steel_title: "รมดำสำหรับเหล็ก",
         steel_desc: "กระบวนการจุ่มเย็น ใช้งานง่าย สีดำสม่ำเสมอทั่วผิวชิ้นงาน สามารถขัดเผยเนื้อเหล็กเพื่อสร้างเอฟเฟกต์ และปิดผิวด้วยแลคเกอร์หรือน้ำมันภายหลัง.",
-        zinc_title: "รมดำสำหรับสังกะสี",
-        zinc_desc: "จุ่มเย็น สีดำเรียบเนียน เหมาะกับชิ้นงานชุบสังกะสีหรือโลหะผสมสังกะสี สามารถปิดผิวด้วยแลคเกอร์/น้ำมันเพื่อยืดอายุการใช้งาน.",
+        zinc_title: "รมดำสำหรับซิงค์ฉีด",
+        zinc_desc: "จุ่มเย็น สีดำเรียบเนียน เหมาะกับชิ้นงานชุบซิงค์ฉีดหรือโลหะผสมสังกะสี สามารถปิดผิวด้วยแลคเกอร์/น้ำมันเพื่อยืดอายุการใช้งาน.",
         al_title: "รมดำสำหรับอลูมิเนียม",
         al_desc: "สารเข้มข้นต้องเจือจาง ใช้ที่อุณหภูมิห้อง 15–27°C (ไม่เกิน 30°C) เพื่อหลีกเลี่ยงการกัดผิวมากเกินไป ให้ชั้นดำสม่ำเสมอบนอลูมิเนียม.",
         patina_title: "สารทำพาทินา (Patina)",
