upload all files

--- a/products/passivation/olive-6-passivation-on-zinc.html
+++ b/products/passivation/olive-6-passivation-on-zinc.html
@@ -7,6 +7,11 @@
   <!-- === SEO (i18n-ready) === -->
   <title id="metaTitle">Hex Green 64 • สีเขียวทหาร 64 | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="โครเมทสีเขียวทหาร (Cr6+) สำหรับงานซิงค์ เข้มลึกแบบ Olive Drab ใช้ได้ทั้งแร็ค/บาร์เรล pH 1.3–2.0 จุ่ม 30–120 วิ พร้อมตัวอย่างผสม 100 ลิตรและแนวทางแก้ปัญหา">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/passivation/olive-6-passivation-on-zinc.html">
