--- a/products/passivation/troubleshootinghexavalentchromeblack.html
+++ b/products/passivation/troubleshootinghexavalentchromeblack.html
@@ -8,6 +8,11 @@
   <title id="metaTitle">Chromate Black 80 (Cr(VI) Black) • สีดำโครม 6 บนซิงค์ | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="สีดำโครม 6 (Chromate Black 80) บนซิงค์ แร็ค/บาร์เรล ช่วง pH 1.6–2.6 เวลา 40–120 s (แนะนำ ~60 s). ผสม 80A:60 cc/L + 80B:80 cc/L ใช้น้ำ DI เท่านั้น เพิ่มทนสนิมด้วย Metal Guard 510 หรือ 20B.">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
   <link rel="canonical" href="https://www.baumechemical.com/products/passivation/troubleshootinghexavalentchromeblack.html">
   <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/passivation/troubleshootinghexavalentchromeblack.html">
