--- a/products/passivation/troubleshootinghexavalentchromeblue.html
+++ b/products/passivation/troubleshootinghexavalentchromeblue.html
@@ -8,6 +8,11 @@
   <title id="metaTitle">Zinc Chromating (Blue, Cr(VI)) • ซิงค์โครเมติ้งสีฟ้าโครม 6</title>
   <meta name="description" id="metaDesc" content="ซิงค์โครเมติ้งสีฟ้า (โครม 6) ใช้สารเคมีปริมาณน้อย บำรุงรักษาง่าย pH เสถียร ยึดเกาะดี ให้ผิวสีฟ้าป้องกันการกัดกร่อน เหมาะงานชุบซิงค์ที่ความหนา &gt; 5 µm.">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e" />
   <link rel="canonical" href="https://www.baumechemical.com/products/passivation/troubleshootinghexavalentchromeblue.html">
   <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/passivation/troubleshootinghexavalentchromeblue.html">
