--- a/products/passivation/troubleshootingtrivalentchromeblack.html
+++ b/products/passivation/troubleshootingtrivalentchromeblack.html
@@ -7,6 +7,11 @@
   <!-- === SEO (i18n-ready) === -->
   <title data-i18n-key="meta_title">Black BZ 471 (Cr(III) Black) • สีดำโครม 3 บนซิงค์ | Baume Chemical</title>
   <meta name="description" content="สีดำโครม 3 บนซิงค์ (Black BZ 471) สำหรับซิงค์กรด/ด่าง pH 2.0 (1.8–2.2) 100 cc/L (80–150) จุ่ม ~60s ล้างน้ำร้อน 70–80°C และซีลด้วย Seal 76 เพื่อความทนสนิมขาว Barrel 48–72h / Rack 72–96h">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <meta name="theme-color" content="#2c5e4e">
   <link rel="canonical" href="https://www.baumechemical.com/products/passivation/troubleshootingtrivalentchromeblack.html">
