--- a/products/passivation/yellow-6-passivation-on-zinc.html
+++ b/products/passivation/yellow-6-passivation-on-zinc.html
@@ -7,6 +7,11 @@
   <!-- === SEO (i18n-ready) === -->
   <title data-i18n-key="meta_title">Chromate 5006 • สีรุ้งน้ำ โครม 6 | Baume Chemical</title>
   <meta name="description" content="สีรุ้งน้ำโครม 6 สำหรับงานซิงค์ ปรับความเข้มง่าย pH 1.5–2.0 จุ่ม 10–20 วินาที อุณหภูมิห้อง พร้อมตัวอย่างการผสม 100 ลิตร และแนวทางแก้ปัญหา" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="http://baumechemical.com/products/passivation/yellow-6-passivation-on-zinc.html">
