--- a/products/passivation/yellow-passivation-on-zinc.html
+++ b/products/passivation/yellow-passivation-on-zinc.html
@@ -8,6 +8,11 @@
   <title data-i18n-key="meta_title">Tri Yellow SC • สีเหลือง โครม 3 บนซิงค์ | Baume Chemical</title>
   <meta name="description" content="Tri Yellow SC โครเมตไตรวาเลนท์โทนเหลือง-รุ้ง สำหรับงานชุบซิงค์ ปลอด Cr(VI) คุม pH 1.4–1.9 แนะนำ ~1.7 จุ่ม 30–90 วินาที เสริมความทนทานด้วยการอบ 120 °C" />
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
   <link rel="canonical" href="https://www.baumechemical.com/products/passivation/yellow-passivation-on-zinc.html">
   <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/passivation/yellow-passivation-on-zinc.html">
