--- a/products/platingcoating/cyanide-free-white-bronze/index.html
+++ b/products/platingcoating/cyanide-free-white-bronze/index.html
@@ -9,6 +9,11 @@
   <meta name="description" content="กระบวนการชุบไวท์บรอนซ์สีเงินสว่าง ปราศจากไซยาไนด์ 317M: สูตรผสม องค์ประกอบบ่อชุบ ช่วงการทำงาน (Rack/Barrel) อุปกรณ์แนะนำ และการแก้ปัญหา (TH/EN).">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/317m-white-bronze/">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
