--- a/products/platingcoating/electrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/index.html
@@ -9,6 +9,11 @@
   <meta name="description" content="โซลูชันแลคเกอร์ไฟฟ้า (E-coat) สำหรับงานอุตสาหกรรม: Acrylic และ Polyurethane เพิ่มความทนกัดกร่อน ป้องกันสนิม และความเงา โดยไม่เปลี่ยนคุณสมบัติวัสดุต้นฉบับ เหมาะกับเครื่องใช้ไฟฟ้า ชิ้นส่วนอุตสาหกรรม และยานยนต์">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
