--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -9,6 +9,11 @@
   <meta name="description" id="metaDesc" content="เกลือนิเกิ้ลดำสำหรับผสมน้ำยาชุบนิเกิ้ลดำ ให้ผิวดำเงาสม่ำเสมอ ใช้ได้กับทองเหลือง/งานชุบนิเกิ้ลเงา เหมาะกับชิ้นส่วนกล้อง แว่นตา อิเล็กทรอนิกส์ และจิวเวลรี่ ปรับเติมตามโบเม่ 9–10">
   <meta name="robots" content="index,follow,max-image-preview:large" />
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e" />
 
   <!-- === Open Graph / Twitter (i18n-updatable) === -->
