--- a/products/polishing/stainless-electropolishing-solution.html
+++ b/products/polishing/stainless-electropolishing-solution.html
@@ -8,6 +8,11 @@
   <meta name="description" content="EP 8511 สำหรับกัดเงา/ขัดผิวสแตนเลสให้เรียบเนียนเงา (คล้ายกระจก) ไม่ติดไฟ ไม่ระเบิด ปราศจากฮาโลเจน/โครเมต ทำงาน 50–80 °C, 4–9 V, 15–45 A/dm², 3–10 นาที พร้อมขั้นตอน การดูแล และ EHS">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/polishing/stainless-electropolishing-solution.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
