--- a/products/pretreatment/ultrasonic.html
+++ b/products/pretreatment/ultrasonic.html
@@ -9,6 +9,11 @@
   <meta name="description" content="Metal Cleaning / Ultrasonic 3348 (AL 3348) น้ำยาทำความสะอาดโลหะสำหรับระบบแช่และอัลตราโซนิก ขจัดคราบน้ำมัน คราบสกปรก คราบเหนียว ใช้ได้กับเหล็ก สแตนเลส อลูมิเนียม ทองเหลือง ทองแดง อุณหภูมิแนะนำ 50–85°C อัตราการใช้ 30–75 cc/L.">
   <meta name="robots" content="index,follow,max-image-preview:large" />
   <link rel="canonical" href="https://www.baumechemical.com//products/pretreatment/ultrasonic.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
