--- a/products/protective/anti-tarnish-bu-20.html
+++ b/products/protective/anti-tarnish-bu-20.html
@@ -9,6 +9,11 @@
   <meta name="description" content="น้ำยากันหมองไฟฟ้า BU-20 สำหรับชิ้นงานเงิน ทอง นิกเกิล ทองแดง และโลหะผสมทองแดง ไล่น้ำ แห้งไว สร้างฟิล์มใสยืดหยุ่น ป้องกันหมอง ช่วงทำงาน: 80–120 mL/L, 20–35 °C, 30–120 s, 0.1–0.5 A/dm² (แอโนดสแตนเลส)">
   <link rel="canonical" href="https://www.baumechemical.com/products/protective/anti-tarnish-bu-20.html">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
