--- a/404.html
+++ b/404.html
@@ -8,6 +8,11 @@
   <title data-i18n-key="title">ไม่พบหน้านี้ (404) | Baume Chemical</title>
   <meta name="description" content="ขออภัย ไม่พบหน้าที่คุณต้องการ คุณสามารถกลับไปยังหน้าหลักได้ที่นี่">
   <meta name="robots" content="noindex, nofollow">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#387b5b">
 
   <!-- OG -->
