--- a/contact-us.html
+++ b/contact-us.html
@@ -11,6 +11,11 @@
 <link rel="canonical" href="https://www.baumechemical.com/contact-us.html">
 <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/contact-us.html">
 <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/contact-us.html">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
 <meta name="theme-color" content="#2c5e4e">
 <meta name="format-detection" content="telephone=no,address=no,email=no">
 
