--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -14,6 +14,11 @@
   <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/blackening/">
   <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/products/blackening/">
   <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/products/blackening/">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
 
   <!-- Open Graph / Twitter -->
   <meta property="og:locale" id="ogLocale" content="th_TH">
