--- a/products/blackening/troubleshootingblackening.html
+++ b/products/blackening/troubleshootingblackening.html
@@ -9,6 +9,11 @@
   <meta name="description" content="น้ำยาจุ่มดำทองเหลือง-ทองแดงแบบหัวเชื้อเข้มข้น ให้ฟิล์มออกไซด์ตั้งแต่สีน้ำตาลอ่อน บรอนซ์ จนถึงดำสนิท ใช้งานได้ทั้งงานแขวน/ถังกลิ้ง จุ่ม 30–120 วินาที ที่อุณหภูมิห้อง พร้อมวิธีใช้และการแก้ปัญหา" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
   <link rel="canonical" href="https://www.baumechemical.com/products/blackening/">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e" />
 
   <!-- Open Graph -->
