--- a/products/blackening/troubleshootingpatina.html
+++ b/products/blackening/troubleshootingpatina.html
@@ -8,6 +8,11 @@
   <meta name="description" content="น้ำยาทำสนิมเขียวสำหรับทองแดง/ทองเหลือง เร่งปฏิกิริยาให้เกิดปาทีนา (verdigris) อย่างเป็นธรรมชาติ ควบคุมลวดลาย/โทนสีได้ ใช้วิธีพ่น จุ่ม หรือทา พร้อมแนวทางการใช้งานและข้อควรระวัง">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/blackening/">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
