--- a/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
+++ b/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
@@ -9,6 +9,11 @@
   <meta name="description" id="metaDesc" content="น้ำยาชุบทองแดงกรดเงา (CopperBrite 900) เงาสูง เครียดต่ำ ยึดเกาะดี เข้าซอกเยี่ยม ควบคุมง่าย องค์ประกอบ: CuSO4 190–240 g/L, H2SO4 70–90 g/L, Cl⁻ 70–120 mg/L; 20–30 °C, pH < 1.0; ระบบสารเติมแต่ง MU/A/B">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingacidcopper/index.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
