--- a/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
@@ -9,6 +9,11 @@
   <meta name="description" id="metaDesc" content="น้ำยาชุบทองแดงด่างปลอดไซยาไนด์ (Copperlume 220) ผิวกึ่งเงา–เงา เกาะดี เข้าซอกเยี่ยม ใช้งานง่ายสำหรับเหล็ก/ทองเหลือง/ซิงค์ไดคาสต์/บรอนซ์/อะลูมิเนียมชุบสังกะสี คุม pH 8.5–10, 50–60 °C" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e" />
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
