--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
@@ -9,6 +9,11 @@
   <meta name="description" id="metaDesc" content="คู่มือแลคเกอร์ใส 2 ระบบในหน้าเดียว: EPA 2020 (แลคเกอร์ไฟฟ้า E-coat) และ แลคเกอร์น้ำ 2200 (Water-based Chromium-free) พร้อมวิธีผสม/สภาวะ/อบ/แก้ปัญหา/อุปกรณ์ และสวิตช์ภาษา TH/EN.">
   <meta name="robots" content="index,follow,max-image-preview:large" />
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e" />
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
