--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
@@ -9,6 +9,11 @@
   <meta name="description" id="metaDesc" content="LT 3405 โพลียูรีเทนแลคเกอร์ไฟฟ้า (Polyurethane E-coat) ฟิล์มใส แข็ง ทนสารเคมี/ความชื้น สเปกการทำงาน วิธีผสม อบ บำรุงรักษา และการแก้ปัญหา แบบสองภาษา TH/EN.">
   <meta name="robots" content="index,follow,max-image-preview:large" />
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e" />
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
