--- a/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
+++ b/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
@@ -9,6 +9,11 @@
   <meta name="description" id="metaDesc" content="ผงเร่งซอกสำหรับฮาร์ดโครมและโครเมี่ยมเงา เพิ่มการเข้าซอก/กระแสต่ำ ช่วยให้ความหนาและความเงาใน LCD ใกล้เคียง HCD ใช้งานและบำรุงรักษาง่าย">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
