--- a/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
@@ -9,6 +9,11 @@
   <meta name="description" id="metaDesc" content="ชุดน้ำยาซาตินนิเกิ้ล (Satin Nickel) สำหรับงาน Rack/Barrel ปรับระดับความด้านได้ ผิวเนียนสม่ำเสมอ ครอบคลุมซอกมุมดี รองรับโครเมี่ยม พร้อมสเปก/สูตรผสม/แนวทางควบคุมครบ">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
