--- a/products/platingcoating/zincplating/index.html
+++ b/products/platingcoating/zincplating/index.html
@@ -9,6 +9,11 @@
   <meta name="description" content="โซลูชันน้ำยาชุบสังกะสีสำหรับงานอุตสาหกรรม: Cyanide / Acid (Ammonium) / Non-Cyanide ครอบคลุมทั้งถังกลิ้งและถังแขวน เงาดี กระจายผิวเยี่ยม ทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างานจริง.">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/zincplating/">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
