--- a/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
@@ -9,6 +9,11 @@
   <meta name="description" content="Acidzinc 99 ระบบซิงค์กรดแอมโมเนียม เงาสูง เข้าซอกดี ใช้ได้ทั้ง Rack/Barrel ออกแบบให้ทำงานได้แม้บ่อร้อน รองรับชิ้นงานหลากหลาย และโครเมตติดทนนาน">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingacidzinc/index.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
