--- a/products/polishing/aluminum-electropolishing-solution.html
+++ b/products/polishing/aluminum-electropolishing-solution.html
@@ -8,6 +8,11 @@
   <title data-i18n-key="meta_title">EP 8539 — น้ำยากัดเงาอลูมิเนียม (Electropolishing) | Baume Chemical</title>
   <meta name="description" content="EP 8539 ช่วยให้ผิวอลูมิเนียมเรียบเงา ลบคม ไม่เกิดควัน NOx ช่วงทำงาน 65–80 °C, 12–24 V, 20–80 A/dm² ภายใน 2–16 นาที พร้อมแนวทางดูแลบ่อและข้อกำหนดอุปกรณ์">
   <link rel="canonical" href="https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <meta name="theme-color" content="#2c5e4e">
 
