--- a/products/polishing/brass-electropolishing-solution.html
+++ b/products/polishing/brass-electropolishing-solution.html
@@ -8,6 +8,11 @@
   <meta name="description" content="Laser B สารเข้มข้นเชิงกรดสำหรับกำจัดออกไซด์/คราบแดงและให้ผิวเงาบนทองเหลือง ไนตริกฟรี ไม่มีควันพิษ จุ่ม 1–3 นาที ใช้ได้ทั้งแร็ค/บาร์เรล ควบคุม pH &lt;2">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/polishing/brass-electropolishing-solution.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
