--- a/products/polishing/steel-electropolishing-solution.html
+++ b/products/polishing/steel-electropolishing-solution.html
@@ -8,6 +8,11 @@
   <meta name="description" content="Steel Brite Dip ทำความสะอาดหลังล้างไขมัน/กัดกรด เพิ่มเงา กัดคราบสเกลด่างดำเหล็กคาร์บอนต่ำ ใช้คู่ไฮโดรเจนเปอร์ออกไซด์ ทำงานอุณหภูมิห้อง 18–32 °C แช่ 30 วินาที–5 นาที พร้อมสัดส่วนผสม การใช้งาน การดูแล และตัวอย่างผสม 40 ลิตร">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/polishing/steel-electropolishing-solution.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
