--- a/products/polishing/zinc-electropolishing-solution.html
+++ b/products/polishing/zinc-electropolishing-solution.html
@@ -8,6 +8,11 @@
   <meta name="description" content="ACITEK MZ-52 น้ำยาจุ่มเงาบนซิ้งค์/ซิ้งค์ฉีด ช่วยกำจัดออกไซด์ คราบสกปรก และปรับผิวให้เงางาม พร้อมก่อนชุบ ใช้เข้มข้น 30–50% ที่ 70–80 °C 2–3 นาที">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/polishing/zinc-electropolishing-solution.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
