--- a/products/pretreatment/acidclean.html
+++ b/products/pretreatment/acidclean.html
@@ -8,6 +8,11 @@
 <title data-i18n-key="meta_title">Cleaner 105 — ยาล้างไขมันสำหรับงานโลหะ | Baume Chemical</title>
 <meta name="description" content="Cleaner 105 น้ำยาล้างคราบไขมันและสนิมสำหรับงานโลหะ ใช้แบบแช่โดยไม่ต้องอุ่น ปกป้องผิว กลิ่นต่ำ และผสมร่วมกับกรดเกลือ/กรดกำมะถันเพื่อเพิ่มประสิทธิภาพการล้าง">
 <link rel="canonical" href="https://www.baumechemical.com//products/pretreatment/acidclean.html">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
 <meta name="robots" content="index,follow,max-image-preview:large">
 <meta name="theme-color" content="#2c5e4e">
 
