--- a/products/pretreatment/soakclean.html
+++ b/products/pretreatment/soakclean.html
@@ -9,6 +9,11 @@
   <meta name="description" content="รวม 2 โซลูชันล้างไขมันก่อนชุบ: Soak Cleaner B1 (แช่/ต้ม/ถังกลิ้ง/อัลตร้าโซนิค) และ Degreaser E60 (ล้างไขมันด้วยไฟฟ้า). เลือกใช้ให้เหมาะกับวัสดุและไลน์งานของคุณ พร้อมคำแนะนำจากทีมเทคนิค.">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com//products/pretreatment/soakclean.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
