--- a/products/protective/anti-tarnish-bu-186.html
+++ b/products/protective/anti-tarnish-bu-186.html
@@ -9,6 +9,11 @@
   <meta name="description" content="น้ำยากันหมอง BU-816 สำหรับชุบซิงค์ นิเกิลเงา/ซาติน ทอง เงิน โครเมียม และสแตนเลส ไล่น้ำ แห้งไว ฟิล์มใสยืดหยุ่น ปลอดตะกั่ว ใช้ 50–120 mL/L จุ่ม 10 s–2 min ที่ ~75–80 °C">
   <link rel="canonical" href="https://www.baumechemical.com/products/protective/anti-tarnish-bu-186.html">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
