--- a/products/protective/tin-anti-tarnish-b100.html
+++ b/products/protective/tin-anti-tarnish-b100.html
@@ -8,6 +8,11 @@
   <meta name="description" content="น้ำยากันหมองสำหรับผิวดีบุก ช่วยไล่น้ำ แห้งไว ฟิล์มใสยืดหยุ่น ปกป้องผิวชุบไม่ให้หมอง ใช้งาน 30–55 °C 50–100 cc/L">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/protective/tin-anti-tarnish-b100.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
