--- a/products/service/index.html
+++ b/products/service/index.html
@@ -12,6 +12,11 @@
   <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/service/">
   <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/products/service/">
   <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/products/service/">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#387b5b">
   <meta name="keywords" content="metal plating service, chemical analysis, AA Test, Salt Spray Test, plating troubleshooting, laboratory, Baume Chemical">
 
