--- a/products/strippers/stripper-brass.html
+++ b/products/strippers/stripper-brass.html
@@ -8,6 +8,11 @@
   <meta name="description" content="NEOBRITE RS ผงลอกนิเกิ้ลสำหรับชิ้นงานทองเหลือง ใช้งานง่าย ผสมกรดกำมะถัน 50 ซี.ซี./ลิตร เข้มข้น 100–150 กรัม/ลิตร ระยะเวลา 5–10 นาที พร้อมตัวอย่างการผสม 100 ลิตร ขั้นตอนใช้งาน และข้อควรปลอดภัย">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/strippers/stripper-brass.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
