--- a/products/strippers/stripper-steel-electroplating.html
+++ b/products/strippers/stripper-steel-electroplating.html
@@ -8,6 +8,11 @@
   <meta name="description" content="Steel Striper TH-9 ยาลอกนิเกิ้ลบนเหล็กแบบใช้ไฟฟ้า ทำงานที่อุณหภูมิห้อง pH 6–8 (ปรับด้วยกรดอะซิติก/แอมโมเนีย) 6–10 V, 5–25 A/dm² พร้อมขั้นตอนฟื้นฟูน้ำยาโดยตกตะกอนโลหะ">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/strippers/stripper-steel-electroplating.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
