--- a/service.html
+++ b/service.html
@@ -11,6 +11,11 @@
   <link rel="canonical" href="service.html">
   <link rel="alternate" hreflang="th" href="service.html">
   <link rel="alternate" hreflang="en" href="service.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <meta name="theme-color" content="#387b5b">
   <meta name="keywords" content="metal plating service, chemical analysis, AA Test, Salt Spray Test, plating troubleshooting, laboratory, Baume Chemical">
 
